log
Thu 11 May 2023 10:22:24 PM UTC: 
 tests:  0|4
total_score: 0/70
f9f0270
Thu 11 May 2023 10:32:43 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
48d6b5e
Thu 11 May 2023 10:34:00 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
4bd04f5
Thu 11 May 2023 10:38:04 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:28: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   22 |     return pq->heapArray[0]->data;
      |                            ^~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
55573e1
Thu 11 May 2023 10:38:15 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
026aced
Thu 11 May 2023 10:39:21 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
5fff948
Fri 12 May 2023 01:08:49 AM UTC: 
 heap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
test.c: In function ‘heap_push’:
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5e10eb2
Fri 12 May 2023 01:09:03 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 45/70
43bd27a
Fri 12 May 2023 01:10:05 AM UTC: 
 heap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  7|1
total_score: 45/70
cec0b22
Fri 12 May 2023 01:30:54 AM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  7|1
total_score: 45/70
dee42c6
